Started translating the Tours.
git-svn-id: http://argouml-sv.tigris.org/svn/argouml-sv/trunk@4 cd0d3a04-681e-0410-94f3-8363f836d511

--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,7 @@ att översätta <a href="http://argouml.tigris.org/">ArgoUML</a> till svenska och
 att vara en samlingspunkt för den svenska delen av ArgoUML-gemenskapen.
 De saker som behöver översättas är:<ul>
 <li>Applikationen ArgoUML (ej påbörjat)
-<li>Web-siten (ej påbörjat)
+<li>Web-siten (påbörjat)
 <li>Användarmanualen och Quick Guide (ej påbörjat).
 </ul>
 <p>
