Added the tour.
git-svn-id: http://argouml-sv.tigris.org/svn/argouml-sv/trunk@5 cd0d3a04-681e-0410-94f3-8363f836d511

--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -9,4 +9,5 @@
  <ul>
   <li><a href="/servlets/ProjectDocumentList">Dokument och filer</a></li>
   <li><a href="/source/browse/argouml-sv/">Källkoden</a></li>
+  <li><a href="/tours/">Rundvandring</a></li>
  </ul>
