--- a/www/index.html
+++ b/www/index.html
@@ -17,7 +17,7 @@ Syftet med detta projekt är
 att översätta <a href="http://argouml.tigris.org/">ArgoUML</a> till svenska och
 att vara en samlingspunkt för den svenska delen av ArgoUML-gemenskapen.
 De saker som behöver översättas är:<ul>
-<li>Applikationen ArgoUML (ej påbörjat)
+<li>Applikationen ArgoUML (påbörjat)
 <li>Web-siten (påbörjat)
 <li>Användarmanualen och Quick Guide (ej påbörjat).
 </ul>
@@ -26,7 +26,7 @@ De saker som behöver översättas är:<ul>
 In English for any non-Swedish that may stumble over this page:
 The purpose of this project is
 to create a complete localization of ArgoUML in Swedish and
-to be the center for the Norwegian Bokmål community.
+to be the center for the ArgoUML community in Swedish.
 
 </body>
 </html>
