Lade till datum. Prioriterade arbetet.
git-svn-id: http://argouml-sv.tigris.org/svn/argouml-sv/trunk@8 cd0d3a04-681e-0410-94f3-8363f836d511

--- a/www/index.html
+++ b/www/index.html
@@ -16,17 +16,21 @@
 Syftet med detta projekt är
 att översätta <a href="http://argouml.tigris.org/">ArgoUML</a> till svenska och
 att vara en samlingspunkt för den svenska delen av ArgoUML-gemenskapen.
-De saker som behöver översättas är:<ul>
-<li>Applikationen ArgoUML (påbörjat)
+De saker som behöver översättas är (i prioritetsordning):<ol>
 <li>Web-siten (påbörjat)
+<li>Applikationen ArgoUML (påbörjat,
+                           inte tillräckligt bra för att levereras med ArgoUML)
 <li>Användarmanualen och Quick Guide (ej påbörjat).
-</ul>
+</ol>
 <p>
     
 In English for any non-Swedish that may stumble over this page:
 The purpose of this project is
 to create a complete localization of ArgoUML in Swedish and
 to be the center for the ArgoUML community in Swedish.
+
+<hr>
+Denna sida var senast uppdaterad $Date$.
 
 </body>
 </html>
