Streamlined the tools.
git-svn-id: http://argouml-sv.tigris.org/svn/argouml-sv/trunk@13 cd0d3a04-681e-0410-94f3-8363f836d511

--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -1,13 +1,17 @@
 <!-- $Id$ -->
  <ul>
-  <li><a href="/servlets/ProjectNewsList">Nyheter</a></li>  
-  <li><a href="/servlets/ProjectMailingListList">Mailinglistor</a></li>
   <li><a href="/servlets/ProjectMemberList">Medlemsskap</a></li>
+  <li><a href="/servlets/ProjectMailingListList">Mailinglistor</a></li>
+  <li><a href="/source/browse/argouml-sv/">K&auml;llkoden</a></li>
+  <li><a href="/tours/">Rundvandring</a></li>
  </ul>
 </dd>
+
+<dt>ArgoUML-projektet (en)</dt>
 <dd>
  <ul>
-  <li><a href="/servlets/ProjectDocumentList">Dokument och filer</a></li>
-  <li><a href="/source/browse/argouml-sv/">Källkoden</a></li>
-  <li><a href="/tours/">Rundvandring</a></li>
+  <li><a href="http://argouml.tigris.org/">Huvudsida</a>  </li>
+  <li><a href="http://argouml.tigris.org/servlets/ProjectNewsList">Nyheter</a>  </li>
+  <li><a href="http://argouml.tigris.org/project_bugs.html">Buggrapporter</a>  </li>
+  <li><a href="http://argouml.tigris.org/dev.html">För utvecklare</a>  </li>
  </ul>
