Changed one forgotten char from latin1.
git-svn-id: http://argouml-sv.tigris.org/svn/argouml-sv/trunk@14 cd0d3a04-681e-0410-94f3-8363f836d511

--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -11,7 +11,7 @@
 <dd>
  <ul>
   <li><a href="http://argouml.tigris.org/">Huvudsida</a>  </li>
-  <li><a href="http://argouml.tigris.org/servlets/ProjectNewsList">Nyheter</a>  </li>
-  <li><a href="http://argouml.tigris.org/project_bugs.html">Buggrapporter</a>  </li>
-  <li><a href="http://argouml.tigris.org/dev.html">För utvecklare</a>  </li>
+  <li><a href="http://argouml.tigris.org/servlets/ProjectNewsList">Nyheter</a></li>
+  <li><a href="http://argouml.tigris.org/project_bugs.html">Buggrapporter</a></li>
+  <li><a href="http://argouml.tigris.org/dev.html">F&ouml;r utvecklare</a></li>
  </ul>
