--- a/www/index.html
+++ b/www/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<META HTTP-EQUIV="CONTENT-TYPE" CONTENT="text/html; charset=iso-8859-1">
  <style type="text/css">
 /* <![CDATA[ */ 
 @import "http://www.tigris.org/branding/css/tigris.css"; 
@@ -9,22 +10,18 @@
   <link rel="stylesheet" type="text/css" href="http://www.tigris.org/branding/css/print.css" media="print" />
 <script src="http://www.tigris.org/branding/scripts/tigris.js" type="text/javascript">
 </script>
- <title>ArgoUML p&aring; Svenska</title>
+ <title>ArgoUML på Svenska</title>
 </head>
 <body>
 
-Syftet med detta projekt &auml;r
-att &ouml;vers&auml;tta <a href="http://argouml.tigris.org/">ArgoUML</a>
-till svenska och
-att vara en samlingspunkt f&ouml;r den svenska delen av ArgoUML-gemenskapen.
-De saker som beh&ouml;ver &ouml;vers&auml;ttas &auml;r (i prioritetsordning):
-<ol>
-<li>Web-siten (p&aring;b&ouml;rjat)
-<li>Applikationen ArgoUML 
-    (p&aring;b&ouml;rjat,
-     inte tillr&auml;ckligt bra f&ouml;r att 
-     levereras med ArgoUML)
-<li>Anv&auml;ndarmanualen och Quick Guide (ej p&aring;b&ouml;rjat).
+Syftet med detta projekt är
+att översätta <a href="http://argouml.tigris.org/">ArgoUML</a> till svenska och
+att vara en samlingspunkt för den svenska delen av ArgoUML-gemenskapen.
+De saker som behöver översättas är (i prioritetsordning):<ol>
+<li>Web-siten (påbörjat)
+<li>Applikationen ArgoUML (påbörjat,
+                           inte tillräckligt bra för att levereras med ArgoUML)
+<li>Användarmanualen och Quick Guide (ej påbörjat).
 </ol>
 <p>
     
