--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,5 @@
 <html>
 <head>
-<META HTTP-EQUIV="CONTENT-TYPE" CONTENT="text/html; charset=iso-8859-1">
  <style type="text/css">
 /* <![CDATA[ */ 
 @import "http://www.tigris.org/branding/css/tigris.css"; 
@@ -10,18 +9,18 @@
   <link rel="stylesheet" type="text/css" href="http://www.tigris.org/branding/css/print.css" media="print" />
 <script src="http://www.tigris.org/branding/scripts/tigris.js" type="text/javascript">
 </script>
- <title>ArgoUML på Svenska</title>
+ <title>ArgoUML pÃ¥ Svenska</title>
 </head>
 <body>
 
-Syftet med detta projekt är
-att översätta <a href="http://argouml.tigris.org/">ArgoUML</a> till svenska och
-att vara en samlingspunkt för den svenska delen av ArgoUML-gemenskapen.
-De saker som behöver översättas är (i prioritetsordning):<ol>
-<li>Web-siten (påbörjat)
-<li>Applikationen ArgoUML (påbörjat,
-                           inte tillräckligt bra för att levereras med ArgoUML)
-<li>Användarmanualen och Quick Guide (ej påbörjat).
+Syftet med detta projekt Ã¤r
+att Ã¶versÃ¤tta <a href="http://argouml.tigris.org/">ArgoUML</a> till svenska och
+att vara en samlingspunkt fÃ¶r den svenska delen av ArgoUML-gemenskapen.
+De saker som behÃ¶ver Ã¶versÃ¤ttas Ã¤r (i prioritetsordning):<ol>
+<li>Web-siten (pÃ¥bÃ¶rjat)
+<li>Applikationen ArgoUML (pÃ¥bÃ¶rjat,
+                           inte tillrÃ¤ckligt bra fÃ¶r att levereras med ArgoUML)
+<li>AnvÃ¤ndarmanualen och Quick Guide (ej pÃ¥bÃ¶rjat).
 </ol>
 <p>
     
