--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -2,7 +2,7 @@
  <ul>
   <li><a href="/servlets/ProjectMemberList">Medlemsskap</a></li>
   <li><a href="/servlets/ProjectMailingListList">Mailinglistor</a></li>
-  <li><a href="/source/browse/argouml-sv/">K&auml;llkoden</a></li>
+  <li><a href="/source/browse/argouml-sv/">Källkoden</a></li>
   <li><a href="/tours/">Rundvandring</a></li>
  </ul>
 </dd>
@@ -13,5 +13,5 @@
   <li><a href="http://argouml.tigris.org/">Huvudsida</a>  </li>
   <li><a href="http://argouml.tigris.org/servlets/ProjectNewsList">Nyheter</a></li>
   <li><a href="http://argouml.tigris.org/project_bugs.html">Buggrapporter</a></li>
-  <li><a href="http://argouml.tigris.org/dev.html">F&ouml;r utvecklare</a></li>
+  <li><a href="http://argouml.tigris.org/dev.html">För utvecklare</a></li>
  </ul>
