--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -1,17 +1,58 @@
 <!-- $Id$ -->
- <ul>
-  <li><a href="/servlets/ProjectMemberList">Medlemsskap</a></li>
-  <li><a href="/servlets/ProjectMailingListList">Mailinglistor</a></li>
-  <li><a href="/source/browse/argouml-sv/">Källkoden</a></li>
-  <li><a href="/tours/">Rundvandring</a></li>
- </ul>
+<!-- This files is generated from the generate-project-tools.sh script. -->
+  <ul>
+    <li><a href="/servlets/ProjectMemberList">Medlemsskap (SV)</a></li>
+    <li><a href="/ds/viewForums.do">Mailinglistor (SV)</a></li>
+    <li><a href="/source/browse/argouml-sv/">K&auml;llkod (SV)</a></li>
+  </ul>
 </dd>
 
-<dt>ArgoUML-projektet (en)</dt>
+<dt>ArgoUMLprojektet</dt>
 <dd>
- <ul>
-  <li><a href="http://argouml.tigris.org/">Huvudsida</a>  </li>
-  <li><a href="http://argouml.tigris.org/servlets/ProjectNewsList">Nyheter</a></li>
-  <li><a href="http://argouml.tigris.org/project_bugs.html">Buggrapporter</a></li>
-  <li><a href="http://argouml.tigris.org/dev.html">För utvecklare</a></li>
- </ul>
+  <ul>
+    <li><a href="http://argouml.tigris.org/">Project home</a></li>
+  </ul>
+</dd>
+<dd>
+  <ul>
+    <li>
+      <a href="http://argouml.tigris.org/servlets/ProjectNewsList">ArgoUML News</a>
+      <a href="http://argouml.tigris.org/servlets/WebFeed?artifact=news&version=rss_2.0">
+        <img src="http://argouml.tigris.org/images/feed-icon.gif" alt="RSS Feed" width="10" height="10"/>
+      </a>
+    </li>
+    <li>
+      <a href="http://argouml.tigris.org/wiki">Developer Wiki</a>
+      <a href="http://argouml.tigris.org/wiki/RecentChanges">RC</a>
+    </li>
+    <li><a href="http://argouml.tigris.org/project_bugs.html">Bugs and Issues</a></li>
+    <li><a href="http://argouml.tigris.org/source/browse/argouml/trunk/src/">Source Code</a></li>
+    <li><a href="http://argouml.tigris.org/servlets/ProjectMemberList">Project Membership</a></li>
+    <li>
+      <a href="http://argouml.tigris.org/ds/viewForums.do">Mailinglistor</a>
+      <a href="http://argouml.markmail.org">MarkMail</a>
+    </li>
+    <li><a href="http://argouml.tigris.org/servlets/ProjectDocumentList">File Sharing</a></li>
+  </ul>
+
+<dt>Anv&auml;nda ArgoUML</dt> 
+<dd> 
+  <ul> 
+    <li><a href="http://argouml.tigris.org/support.html">Support</a></li> 
+    <li><a href="http://argouml-stats.tigris.org/documentation/quick-guide-0.28/">Snabbguide (engelska) 0.28</a></li> 
+    <li><a href="http://argouml-stats.tigris.org/documentation/manual-0.28/">Anv&auml;ndarmanual (engelska) 0.28</a></li> 
+    <li><a href="http://argouml.tigris.org/faqs/users.html">FAQ (engelska)</a></li> 
+    <li><a href="http://www.argouml-users.net/" target="wiki">Wiki</a></li> 
+    <li><a href="http://www.argouml-users.net/forum" target="forum">Forum</a></li> 
+    <li><a href="http://argouml.tigris.org/servlets/SummarizeList?listName=users">Anv&auml;ndaremailinglista (engelska)</a></li> 
+    <li><a href="http://argouml.tigris.org/documentation/">Dokumentation (engelska)</a></li> 
+    <li><a href="http://argouml.tigris.org/tours/">Rundvandring (engelska)</a></li> 
+    <li><a href="http://argouml-downloads.tigris.org/">Ladda ner</a></li>
+  </ul> 
+
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-682460-2";
+urchinTracker();
+</script>
