--- a/www/index.html
+++ b/www/index.html
@@ -19,7 +19,7 @@ att vara en samlingspunkt för den svenska delen av ArgoUML-gemenskapen.
 De saker som behöver översättas är (i prioritetsordning):<ol>
 <li>Web-siten (påbörjat)
 <li>Applikationen ArgoUML (påbörjat,
-                           inte tillräckligt bra för att levereras med ArgoUML)
+                           för närvarande inte tillräckligt bra för att levereras med ArgoUML)
 <li>Användarmanualen och Quick Guide (ej påbörjat).
 </ol>
 <p>
