--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body class="composite">
     <div id="banner">
                     <div id="bannerLeft">
-                argouml-sv
+                argouml-i18n-sv
                 </div>
                     <div class="clear">
         <hr/>
